# Metu-Rover

CamerasRover-main/Zero_/: app3.py  picam5.py
CamerasRover-main/flask_/: app.py  app2.py
CamerasRover-main/flask_/templates/: index.html  servo_control.html  trial2.html  trial3.html  trial4.html
CamerasRover-main/servo/: duo_control.py  duo_control2.py
gps_publisher/: package.xml  setup.py
gps_publisher/gps_publisher/: gps_node.py
img_publisher/: package.xml  setup.cfg  setup.py
img_publisher/img_publisher/: img_sub_node.py  ip_stream_node.py  webcam_node.py
